--- a/champ-api/docs/asvs/4.0.3/V1.1.1.md
+++ b/champ-api/docs/asvs/4.0.3/V1.1.1.md
@@ -1,28 +1,23 @@
-## Enhanced Detail for ASVS V1.1.1
+### ASVS Requirement V1.2.2: Secure Communication Between Components
 
-### Simplified Explanation
-Ensure every phase of your project, from initial design to final deployment, includes security considerations. This means actively planning to protect your application against threats at every step of its development.
+**Goal:** Make sure all your application parts talk safely without eavesdroppers.
 
-### Examples and Best Practices
-- **Planning Phase**: Incorporate threat modeling to identify and mitigate potential security issues from the start.
-- **Design Phase**: Use secure design principles such as least privilege and defense in depth.
-- **Implementation Phase**: Follow secure coding guidelines, such as those provided by OWASP, to prevent common vulnerabilities.
-- **Verification Phase**: Implement automated security testing tools (SAST, DAST) to catch issues early.
-- **Maintenance Phase**: Regularly update dependencies and patch known vulnerabilities.
+---
 
-### Tools and Resources
-- **Threat Modeling**: Microsoft Threat Modeling Tool, OWASP Threat Dragon.
-- **Secure Coding Guidelines**: [OWASP Secure Coding Practices](https://owasp.org/www-project-secure-coding-practices-quick-reference-guide/).
-- **Automated Testing Tools**: SonarQube (SAST), OWASP ZAP (DAST).
+Imagine your application as a bustling marketplace. Each stall (component) exchanges notes (data) with others. Now, if these notes were passed openly, anyone could sneak a peek. V1.2.2 is about ensuring these notes are passed in sealed, unreadable envelopes, visible only to the intended recipient.
 
-### Common Pitfalls
-- Neglecting security considerations in early stages, leading to costly fixes later.
-- Overlooking the importance of regular dependency updates and patches.
+#### Why It Matters
+- **Privacy:** Keeps sensitive data from being intercepted during transfer.
+- **Integrity:** Ensures data isn’t tampered with mid-transmission.
 
-### Checklist for Compliance
-- [ ] Conducted threat modeling during planning phase.
-- [ ] Applied secure design principles.
-- [ ] Followed secure coding guidelines.
-- [ ] Performed automated security testing.
-- [ ] Established a process for regular updates and patches.
+#### How to Implement It
+1. **Identify Communication Lines:** Map out how different parts of your application interact. This could be your web server talking to the database or services communicating with each other.
+2. **Use Secure Protocols:** Replace any plain-text communication (HTTP, FTP) with their secure counterparts (HTTPS, SFTP) that encrypt data in transit.
+3. **Verify Identities:** Just as you'd confirm the identity of someone you're handing a sensitive document to, ensure that the components verify each other’s identities using certificates or keys.
+4. **Minimal Privilege:** Ensure each component only has the necessary permissions to perform its function and no more.
 
+#### Real-World Analogy
+Think of sending a registered mail through the post office. You’re not only ensuring that your letter is sealed but also that the post office verifies the identity of the person receiving the package. Similarly, secure communication protocols ensure that data is both encrypted and sent to the right component.
+
+#### Final Thought
+By implementing V1.2.2, you’re essentially putting your data in a secure convoy, ensuring it reaches its destination safely and without unwanted attention. This way, even if someone intercepts the communication, they won’t be able to decipher the contents.
