feat(content): add first draft of ASVS requirements write-ups for authentication category
Complete the initial draft of markdown files for the Authentication category in the Application Security Verification Standard (ASVS) requirements. These write-ups are served through an API. Also, updated the requirement detail modal to include the requirement ID and the description for better user understanding.

--- a/champ-api/docs/asvs/4.0.3/V1.1.1.md
+++ b/champ-api/docs/asvs/4.0.3/V1.1.1.md
@@ -1,4 +1,4 @@
-## V1.2.2 - Secure Communication Between Components
+# Secure Communication Between Components
 
 > Verify the use of a secure software development lifecycle that addresses security in all stages of development.
 
