--- a/champ-api/docs/asvs/4.0.3/V2.1.10.md
+++ b/champ-api/docs/asvs/4.0.3/V2.1.10.md
@@ -1,4 +1,6 @@
-# V2.1.10 - No Periodic Password Rotation Requirement
+# No Periodic Password Rotation Requirement
+
+---
 
 ## Simplified Explanation
 
