--- a/champ-api/docs/asvs/4.0.3/V2.1.11.md
+++ b/champ-api/docs/asvs/4.0.3/V2.1.11.md
@@ -1,4 +1,6 @@
-# V2.1.11 - Permit Paste Functionality and Support for Password Managers
+# Permit Paste Functionality and Support for Password Managers
+
+---
 
 ## Simplified Explanation
 
