--- a/champ-api/docs/asvs/4.0.3/V2.1.3.md
+++ b/champ-api/docs/asvs/4.0.3/V2.1.3.md
@@ -1,4 +1,6 @@
-# V2.1.3 - Ensure Comprehensive Password Validation
+# Ensure Comprehensive Password Validation
+
+---
 
 ## Simplified Explanation
 
