--- a/champ-api/docs/asvs/4.0.3/V2.1.4.md
+++ b/champ-api/docs/asvs/4.0.3/V2.1.4.md
@@ -1,4 +1,6 @@
-# V2.1.4 - Permit All Unicode Characters in Passwords
+# Permit All Unicode Characters in Passwords
+
+---
 
 ## Simplified Explanation
 
