--- a/champ-api/docs/asvs/4.0.3/V2.1.7.md
+++ b/champ-api/docs/asvs/4.0.3/V2.1.7.md
@@ -1,4 +1,6 @@
-# V2.1.7 - Check Passwords Against Breach Databases
+# Check Passwords Against Breach Databases
+
+---
 
 ## Simplified Explanation
 
