--- a/champ-api/docs/asvs/4.0.3/V2.2.1.md
+++ b/champ-api/docs/asvs/4.0.3/V2.2.1.md
@@ -1,4 +1,6 @@
-# V2.2.1 - Effective Anti-Automation for Authentication
+# Effective Anti-Automation for Authentication
+
+---
 
 ## Simplified Explanation
 
