--- a/champ-api/docs/asvs/4.0.3/V2.2.3.md
+++ b/champ-api/docs/asvs/4.0.3/V2.2.3.md
@@ -1,4 +1,6 @@
-# V2.2.3 - Secure Notifications for Authentication Changes
+# Secure Notifications for Authentication Changes
+
+---
 
 ## Simplified Explanation
 
