--- a/champ-api/docs/asvs/4.0.3/V2.2.4.md
+++ b/champ-api/docs/asvs/4.0.3/V2.2.4.md
@@ -1,4 +1,6 @@
-# V2.2.4 - Impersonation Resistance in Authentication
+# Impersonation Resistance in Authentication
+
+---
 
 ## Simplified Explanation
 
