--- a/champ-api/docs/asvs/4.0.3/V2.2.5.md
+++ b/champ-api/docs/asvs/4.0.3/V2.2.5.md
@@ -1,4 +1,6 @@
-# V2.2.5 - Secure Communication in Multi-factor Authentication
+# Secure Communication in Multi-factor Authentication
+
+---
 
 ## Simplified Explanation
 
