--- a/champ-api/docs/asvs/4.0.3/V2.2.6.md
+++ b/champ-api/docs/asvs/4.0.3/V2.2.6.md
@@ -1,4 +1,6 @@
-# V2.2.6 - Ensure Replay Resistance in Authentication
+# Ensure Replay Resistance in Authentication
+
+---
 
 ## Simplified Explanation
 
