--- a/champ-api/docs/asvs/4.0.3/V2.2.7.md
+++ b/champ-api/docs/asvs/4.0.3/V2.2.7.md
@@ -1,4 +1,6 @@
-# V2.2.7 - Verify Intent in Multi-factor Authentication
+# Verify Intent in Multi-factor Authentication
+
+---
 
 ## Simplified Explanation
 
