--- a/champ-api/docs/asvs/4.0.3/V2.3.1.md
+++ b/champ-api/docs/asvs/4.0.3/V2.3.1.md
@@ -1,4 +1,6 @@
-# V2.3.1 - Secure Initial Passwords and Activation Codes
+# Secure Initial Passwords and Activation Codes
+
+---
 
 ## Simplified Explanation
 
