--- a/champ-api/docs/asvs/4.0.3/V2.3.3.md
+++ b/champ-api/docs/asvs/4.0.3/V2.3.3.md
@@ -1,4 +1,6 @@
-# V2.3.3 - Timely Renewal Notifications for Authenticators
+# Timely Renewal Notifications for Authenticators
+
+---
 
 ## Simplified Explanation
 
