--- a/champ-api/docs/asvs/4.0.3/V2.4.2.md
+++ b/champ-api/docs/asvs/4.0.3/V2.4.2.md
@@ -1,4 +1,6 @@
-# V2.4.2 - Use Sufficiently Long Salts in Password Hashing
+# Use Sufficiently Long Salts in Password Hashing
+
+---
 
 ## Simplified Explanation
 
