--- a/champ-api/docs/asvs/4.0.3/V2.4.3.md
+++ b/champ-api/docs/asvs/4.0.3/V2.4.3.md
@@ -1,4 +1,6 @@
-# V2.4.3 - Password Hashing with Adequate Iterations
+# Password Hashing with Adequate Iterations
+
+---
 
 ## Simplified Explanation
 
