--- a/champ-api/docs/asvs/4.0.3/V2.1.6.md
+++ b/champ-api/docs/asvs/4.0.3/V2.1.6.md
@@ -1,4 +1,6 @@
-# V2.1.6 - Verify Password Change with Current Password
+# Verify Password Change with Current Password
+
+---
 
 ## Simplified Explanation
 
